force-app/main/default/objects/Lead/fields/Account_ID_for_LD_Convert__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_for_LD_Convert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID for LD Convert</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account ID for LD Convert)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>