force-app/main/default/objects/Lead/fields/AlignedPkg__aligned_room__c.field-meta.xml
<CustomField>
    <fullName>AlignedPkg__aligned_room__c</fullName>
    <description>The Aligned App room URL</description>
    <label>Aligned Room</label>
    <type>Url</type>
</CustomField>