force-app/main/default/objects/Lead/fields/AlignedPkg__CurrentGenerators__c.field-meta.xml
<CustomField>
    <fullName>AlignedPkg__CurrentGenerators__c</fullName>
    <label>Current Generator(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>