force-app/main/default/objects/Lead/fields/Annual_Revenue_WH__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_WH__c</fullName>
    <label>Annual Revenue Range</label>
    <length>250</length>
    <type>Text</type>
</CustomField>