force-app/main/default/objects/Lead/fields/API_Trial__c.field-meta.xml
<CustomField>
    <fullName>API_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API Trial</label>
    <type>Checkbox</type>
</CustomField>