force-app/main/default/objects/Lead/fields/Apple_App_MAU__c.field-meta.xml
<CustomField>
    <fullName>Apple_App_MAU__c</fullName>
    <label>Apple App MAU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>