force-app/main/default/objects/Lead/fields/Automatic_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be triggered by LD</description>
    <label>Automatic Reassign?</label>
    <type>Checkbox</type>
</CustomField>