force-app/main/default/objects/Lead/fields/Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Available_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available Budget</label>
    <type>Checkbox</type>
</CustomField>