force-app/main/default/objects/Lead/fields/Bad_Number__c.field-meta.xml
<CustomField>
    <fullName>Bad_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bad Number checked by MIR when phone is incorrect</description>
    <label>Bad Number</label>
    <type>Checkbox</type>
</CustomField>