force-app/main/default/objects/Lead/fields/BI_Data__c.field-meta.xml
<CustomField>
    <fullName>BI_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BI Data</label>
    <referenceTo>BI_Data__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>