force-app/main/default/objects/Lead/fields/blba_meeting_score__c.field-meta.xml
<CustomField>
    <fullName>blba_meeting_score__c</fullName>
    <formula>IF(!ISBLANK(BI_Data__r.blba_meeting_score__c), BI_Data__r.blba_meeting_score__c, &apos;C&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BLBA Meeting Score</label>
    <type>Text</type>
</CustomField>