force-app/main/default/objects/Lead/fields/blog_optin__c.field-meta.xml
<CustomField>
    <fullName>blog_optin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>blog_optin</label>
    <type>Checkbox</type>
</CustomField>