force-app/main/default/objects/Lead/fields/BP_Compare__c.field-meta.xml
<CustomField>
    <fullName>BP_Compare__c</fullName>
    <formula>If(Base_Product__c=BI_Data__r.Base_Product__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BP Compare</label>
    <type>Checkbox</type>
</CustomField>