force-app/main/default/objects/Lead/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <label>Bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>