force-app/main/default/objects/Lead/fields/BudgetMin_registration__c.field-meta.xml
<CustomField>
    <fullName>BudgetMin_registration__c</fullName>
    <label>Budget Min (registration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>