force-app/main/default/objects/Lead/fields/Business_unit_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Business_unit_timestamp__c</fullName>
    <label>Business unit timestamp</label>
    <type>DateTime</type>
</CustomField>