force-app/main/default/objects/Lead/fields/Button_Caption__c.field-meta.xml
<CustomField>
    <fullName>Button_Caption__c</fullName>
    <label>Button Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>