force-app/main/default/objects/Lead/fields/Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Link__c</fullName>
    <formula>Owner:User.Calndely_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendly Link</label>
    <type>Text</type>
</CustomField>