force-app/main/default/objects/Lead/fields/call_made_from_groudon__c.field-meta.xml
<CustomField>
    <fullName>call_made_from_groudon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>call_made_from_groudon</label>
    <type>Checkbox</type>
</CustomField>