force-app/main/default/objects/Lead/fields/Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Date__c</fullName>
    <description>MIS-1376</description>
    <label>Campaign Date</label>
    <type>Date</type>
</CustomField>