force-app/main/default/objects/Lead/fields/Campaign_Solution__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Solution__c</fullName>
    <label>Campaign Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>