force-app/main/default/objects/Lead/fields/Cancellation_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Explanation__c</fullName>
    <label>Cancellation Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>