force-app/main/default/objects/Lead/fields/Category_Rank__c.field-meta.xml
<CustomField>
    <fullName>Category_Rank__c</fullName>
    <label>Category Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>