force-app/main/default/objects/Lead/fields/Chat_Gpt_Last_Call_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Chat_Gpt_Last_Call_Datetime__c</fullName>
    <description>will contain the last successful callOut to openApi</description>
    <label>Chat Gpt Last Call Datetime</label>
    <type>DateTime</type>
</CustomField>