force-app/main/default/objects/Lead/fields/ChatGPT_Summary__c.field-meta.xml
<CustomField>
    <fullName>ChatGPT_Summary__c</fullName>
    <description>text from Brief Account Summary button</description>
    <label>ChatGPT Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>