force-app/main/default/objects/Lead/fields/Chilipiper_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Chilipiper_Campaign__c</fullName>
    <description>Use this field to pass UTMs from chilipiper campaigns to Salesforce.
MIS-1990</description>
    <label>Chilipiper Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>