force-app/main/default/objects/Lead/fields/Clean_Domain__c.field-meta.xml
<CustomField>
    <fullName>Clean_Domain__c</fullName>
    <formula>CASE(Email_address_domain_type__c, 
     &apos;Company&apos;, Email_DomainClean__c , 
     Website_Domain__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clean Domain</label>
    <type>Text</type>
</CustomField>