force-app/main/default/objects/Lead/fields/Clearbit_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Enriched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clearbit Enriched</label>
    <type>Checkbox</type>
</CustomField>