force-app/main/default/objects/Lead/fields/Clearbit_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Revenue__c</fullName>
    <label>Clearbit Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>