force-app/main/default/objects/Lead/fields/Clearbit_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Timestamp__c</fullName>
    <label>Clearbit Timestamp</label>
    <type>DateTime</type>
</CustomField>