force-app/main/default/objects/Lead/fields/clientIp__c.field-meta.xml
<CustomField>
    <fullName>clientIp__c</fullName>
    <label>Lead I.P</label>
    <length>255</length>
    <type>Text</type>
</CustomField>