force-app/main/default/objects/Lead/fields/CodeContactId__c.field-meta.xml
<CustomField>
    <fullName>CodeContactId__c</fullName>
    <label>CodeContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>