force-app/main/default/objects/Lead/fields/CodeParentID__c.field-meta.xml
<CustomField>
    <fullName>CodeParentID__c</fullName>
    <description>Used by code matching mechanism</description>
    <label>CodeParentID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>