force-app/main/default/objects/Lead/fields/Company_LDR_Compare__c.field-meta.xml
<CustomField>
    <fullName>Company_LDR_Compare__c</fullName>
    <formula>If(((Upper(Polygraph_Company_Name__c)=Upper(Company))||Isblank(Polygraph_Company_Name__c)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company LDR Compare</label>
    <type>Checkbox</type>
</CustomField>