force-app/main/default/objects/Lead/fields/Company_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_2__c</fullName>
    <inlineHelpText>Company name as described in the Company Qualification service</inlineHelpText>
    <label>Company Name Orb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>