force-app/main/default/objects/Lead/fields/Company_Name_Clearbit__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Clearbit__c</fullName>
    <label>Company Name Clearbit</label>
    <length>200</length>
    <type>Text</type>
</CustomField>