force-app/main/default/objects/Lead/fields/Company_Name_Current_Source__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Current_Source__c</fullName>
    <label>Company Name Current Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>