force-app/main/default/objects/Lead/fields/Company_Name_Current_Source_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Current_Source_Last_Updated__c</fullName>
    <label>Company Name Current Source Last Updated</label>
    <type>DateTime</type>
</CustomField>