force-app/main/default/objects/Lead/fields/Company_registration__c.field-meta.xml
<CustomField>
    <fullName>Company_registration__c</fullName>
    <label>Company (registration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>