force-app/main/default/objects/Lead/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <label>Competitor Produc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HitWise</fullName>
            </value>
            <value>
                <fullName>ComScore</fullName>
            </value>
            <value>
                <fullName>Compete</fullName>
            </value>
            <value>
                <fullName>Alexa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>(none)</fullName>
            </value>
            <value>
                <fullName>JumpShot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>