force-app/main/default/objects/Lead/fields/Complete_Registration__c.field-meta.xml
<CustomField>
    <fullName>Complete_Registration__c</fullName>
    <formula>if( or( ISBLANK( Company) ,ISBLANK( Website),ISBLANK(Employees_Min__c),ISBLANK(Employees_Max__c),ISBLANK( text(SW_Industry__c)),ISBLANK( Country )),false,true)</formula>
    <label>Complete Registration</label>
    <type>Checkbox</type>
</CustomField>