force-app/main/default/objects/Lead/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <label>Contact Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>