force-app/main/default/objects/Lead/fields/Contact_Us_Form__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Us Form</label>
    <type>Checkbox</type>
</CustomField>