force-app/main/default/objects/Lead/fields/Contact_Us_Form_Message__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Form_Message__c</fullName>
    <label>Contact Us Form Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>