force-app/main/default/objects/Lead/fields/Contact_Us_Form_Subject__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Form_Subject__c</fullName>
    <label>Contact Us Form Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>