force-app/main/default/objects/Lead/fields/Contact_Us_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Type__c</fullName>
    <label>Contact Us Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>