force-app/main/default/objects/Lead/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code C</label>
    <length>10</length>
    <type>Text</type>
</CustomField>